--- a/src/html.css
+++ b/src/html.css
@@ -32,28 +32,6 @@ html {
   }
 }
 
-body {
-  line-height: 1;
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
-  font-size: 1rem;
-  font-weight: 300;
-  line-height: 1.65;
-  background-color: #ffffff;
-  color: #000000;
-  -webkit-text-size-adjust: none;
-  -ms-overflow-style: scrollbar;
-}
-
-@media screen and (max-width: 480px) {
-  body {
-    min-width: 320px;
-  }
-}
-
-
-
-@media screen and (max-width: 480px) {
-  body {
-    min-width: 320px;
-  }
-}
+/* html {
+  box-sizing: border-box;
+} */
