--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@ html {
   box-sizing: border-box;
 }
 
+body, p {
+  margin: 0;
+}
+
 @media screen and (max-width: 480px) {
   html {
     min-width: 320px;
