--- a/src/index.css
+++ b/src/index.css
@@ -12,29 +12,45 @@ body, p {
   }
 }
 
-@media screen and (max-width: 1680px) {
+@media screen and (max-width: 360px) {
   html {
-    font-size: 14pt;
-  }
-}
-
-@media screen and (max-width: 1280px) {
-  html {
-    font-size: 12pt;
+    /* font-size: 10pt; */
+    font-size: 11pt;
   }
 }
 
 @media screen and (max-width: 736px) {
   html {
     font-size: 11pt;
+    /* font-size: 12pt; */
   }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 1280px) {
   html {
-    font-size: 10pt;
+    /* font-size: 12pt; */
+    font-size: 13pt;
   }
 }
+
+@media screen and (max-width: 1680px) {
+  html {
+    /* font-size: 14pt; */
+    font-size: 15pt;
+  }
+}
+@media screen and (min-width: 1680px) {
+  html {
+    /* font-size: 14pt; */
+    font-size: 15pt;
+  }
+}
+
+
+
+
+
+
 
 body {
   line-height: 1;
